--- a/index.html
+++ b/index.html
@@ -419,21 +419,12 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://nx2bs.com/c?o=39&a=1750", probability: 7 },
-                { url: "https://nx2bs.com/c?o=38&a=1750", probability: 4 },
-                { url: "https://nx2bs.com/c?o=37&a=1750", probability: 8 },
-                { url: "https://nx2bs.com/c?o=36&a=1750", probability: 5 },
-                { url: "https://nx2bs.com/c?o=35&a=1750", probability: 3 },
-                { url: "https://nx2bs.com/c?o=34&a=1750", probability: 4 },
-                { url: "https://nx2bs.com/c?o=33&a=1750", probability: 2 },
-                { url: "https://nx2bs.com/c?o=31&a=1750", probability: 9 },
-                { url: "https://nx2bs.com/c?o=30&a=1750", probability: 4 },
-                { url: "https://nx2bs.com/c?o=29&a=1750", probability: 2 },
-                { url: "https://nx2bs.com/c?o=28&a=1750", probability: 11 },
-                { url: "https://nx2bs.com/c?o=27&a=1750", probability: 15 },
-                { url: "https://nx2bs.com/c?o=26&a=1750", probability: 2 },
-                { url: "https://nx2bs.com/c?o=24&a=1750", probability: 16 },
-                { url: "https://nx2bs.com/c?o=32&a=1750", probability: 8 }
+                { url: "https://aff2jobs.com/go?c=5787&p=33054&sid=arm", probability: 34 },
+                { url: "https://aff2jobs.com/go?c=5788&p=33054&sid=Fahad", probability: 16 },
+                { url: "https://aff2jobs.com/go?c=5807&p=33054&sid=sagor", probability: 22 },
+                { url: "https://aff2jobs.com/go?c=5806&p=33054&sid=Towhid", probability: 18 },
+                { url: "https://aff2jobs.com/go?c=5784&p=33054&sid=ak", probability: 10 },
+                
             ];
             
             function redirect() {
