--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://aff2jobs.com/go?c=5787&p=33054&sid=arm", probability: 34 },
-                { url: "https://aff2jobs.com/go?c=5788&p=33054&sid=Fahad", probability: 16 },
-                { url: "https://aff2jobs.com/go?c=5807&p=33054&sid=sagor", probability: 22 },
-                { url: "https://aff2jobs.com/go?c=5806&p=33054&sid=Towhid", probability: 18 },
-                { url: "https://aff2jobs.com/go?c=5784&p=33054&sid=ak", probability: 10 },
+                { url: "https://www.aplfb8trk.com/NWJGRM2/C3RB9GX/?sub1=arman", probability: 8 },
+                { url: "https://www.aplfb8trk.com/NWJGRM2/C3PXDQB/?sub1=Hassan", probability: 7 },
+                { url: "https://www.aplfb8trk.com/NWJGRM2/C3M5M94/?sub1=Macclum", probability: 43 },
+                { url: "https://www.aplfb8trk.com/NWJGRM2/C3NJJ1P/?sub1=John", probability: 27 },
+                { url: "https://www.aplfb8trk.com/NWJGRM2/C3H1139/?sub1=David", probability: 15 },
                 
             ];
             
