--- a/index.html
+++ b/index.html
@@ -419,11 +419,13 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://www.aplfb8trk.com/NWJGRM2/C3RB9GX/?sub1=arman", probability: 8 },
-                { url: "https://www.aplfb8trk.com/NWJGRM2/C3PXDQB/?sub1=Hassan", probability: 7 },
-                { url: "https://www.aplfb8trk.com/NWJGRM2/C3M5M94/?sub1=Macclum", probability: 43 },
-                { url: "https://www.aplfb8trk.com/NWJGRM2/C3NJJ1P/?sub1=John", probability: 27 },
-                { url: "https://www.aplfb8trk.com/NWJGRM2/C3H1139/?sub1=David", probability: 15 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/35NXTC3F/", probability: 30 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/51F5PFD/ ", probability: 15 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/542QJFK/", probability: 15 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/5445F66/", probability: 10 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/548B3D1/", probability: 10 },
+		{ url: "https://www.gn3atrk.com/2J94HKCN/54SZN79/", probability: 15 },
+                { url: "https://www.gn3atrk.com/2J94HKCN/54WCJXW/", probability: 5 },
                 
             ];
             
