--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://aff2jobs.com/go?c=5787&p=33054&sid=piashvai", probability: 45 },
-                { url: "https://aff2jobs.com/go?c=5806&p=33054&sid=piash2 ", probability: 30 },
-                { url: "https://aff2jobs.com/go?c=5807&p=33054&sid=piash3", probability: 25 },
+                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 45 },
+                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 30 },
+                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 25 },
                  
             ];
             
