--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 45 },
-                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 30 },
-                { url: "https://trac.cpabounty.com/redirect?aff_id=1331&offer_id=351", probability: 25 },
+                { url: "", probability: 45 },
+                { url: "", probability: 30 },
+                { url: "", probability: 25 },
                  
             ];
             
