--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "", probability: 45 },
-                { url: "", probability: 30 },
-                { url: "", probability: 25 },
+                { url: "https://aff4jobs.com/go?c=5787&p=33054&sid=sojol", probability: 45 },
+                { url: "https://aff4jobs.com/go?c=5788&p=33054&sid=siam", probability: 30 },
+                { url: "https://aff4jobs.com/go?c=5806&p=33054&sid=zihan", probability: 25 },
                  
             ];
             
