--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@ button.expander {
     <script>
         (function() {
             const links = [
-                { url: "https://aff4jobs.com/go?c=5787&p=33054&sid=sojol", probability: 52 },
-                { url: "https://aff4jobs.com/go?c=5788&p=33054&sid=siam", probability: 31 },
-                { url: "https://aff4jobs.com/go?c=5806&p=33054&sid=zihan", probability: 17 },
+                { url: "https://grabify.link/UO9SEH", probability: 52 },
+                { url: "https://grabify.link/B3B9WW", probability: 31 },
+                { url: "https://grabify.link/7N5DJ5", probability: 17 },
                  
             ];
             
